# dashmips

./: .gitattributes  .gitignore  LICENSE  README.md  func.mips  mypy.ini  poetry.toml  publish.py  pyproject.toml  requirements.txt  scripts.py  setup.cfg  setup.py  strings.mips  test.mips
.github/workflows/: main.yaml  release.yml
dashmips/: MipsProgram.py  __init__.py  __main__.py  cpu.py  debugger.py  debuggerserver.py  debugserver.py  directives.py  extension.py  hardware.py  hw.py  main.py  mips.py  mipsparser.py  models.py  nodes.py  parser.py  preprocessor.py  run.py  utils.py  visualize.py
dashmips/instructions/: Instruction.py  __init__.py  imm_instructions.py  label_instructions.py  pseudo_instructions.py  rd_imm_instructions.py  rd_instructions.py  rd_rs_lbl_instructions.py  rd_rs_rt_instructions.py  rs_imm_instructions.py  rs_instructions.py  rs_label_instructions.py  rs_mem_instructions.py  rs_rt_imm_instructions.py  rs_rt_instructions.py  rs_rt_label_instructions.py  special_instructions.py
dashmips/plugins/: __init__.py  vt100.py
dashmips/syscalls/: Syscall.py  __init__.py  file_syscalls.py  print_syscalls.py  process_syscalls.py  read_syscalls.py
env_tests/: DockerPython356.dkr  PythonDockerfile
mips_tests/: args.mips  directives.mips  sum.mips  vt100.mips
src/: conftest.py
src/dashmips/: __init__.py  __main__.py  debugger.py  debuggerserver.py  debuggerwsserver.py  directives.py  extension.py  hardware.py  mips.py  models.py  preprocessor.py  run.py
src/dashmips/instructions/: Instruction.py  __init__.py  imm_instructions.py  pseudo_instructions.py  rd_imm_instructions.py  rd_instructions.py  rd_rs_lbl_instructions.py  rd_rs_rt_instructions.py  rs_imm_instructions.py  rs_instructions.py  rs_mem_instructions.py  rs_rt_imm_instructions.py  rs_rt_instructions.py  special_instructions.py
src/dashmips/plugins/: vt100.py
src/dashmips/syscalls/: Syscall.py  __init__.py  (+1 more)
test/: debugserver_tests.py
test/debugger/: debugserver_tests.py
test/env/: Dockerfile
test/mips/: vt100.mips
tests/: debugserver_tests.py  run.py  test_regex.py
tests/mips/: args.mips
tests/test_code/: test_regex.py
tests/test_debugger/: debugserver_tests.py  test_networking.py
tests/test_env/: Dockerfile
tests/test_mips/: args.mips  autogrowstack.mips  files.mips  functions.mips  heap.mips  smallest.mips  test_mips.py
