[tool.poetry]
name = "dashmips"
version = "0.1.1"
description = "Mips Interpreter"
authors = ["Neal Beeken <nbbeeken@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nbbeeken/dashmips"
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Assemblers",
    "Programming Language :: Assembly",
    "License :: OSI Approved :: MIT License"
]
packages = [{ include = "dashmips", from = "." }]

[tool.poetry.scripts]
dashmips = "dashmips.__main__:main"

[tool.poetry.dependencies]
"python" = "^3.6"
"dataclasses" = { version = "^0.6", python = "3.6" }
"websockets" =  { version = "^8.0.2", optional = true }

[tool.poetry.dev-dependencies]
"mypy" = "^0.720"
"mypy-extensions" = "^0.4.1"
"pycodestyle" = "^2.5.0"
"autopep8" = "^1.4.4"
"pydocstyle" = "^3.0.0"
"pytest" = "^5.0.1"
"pytest-pycodestyle" = "^1.4.0"
"pytest-pydocstyle" = "^1.5.0"
"pytest-tap" = "^2.3"
"pytest-mypy" = "^0.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
