[tool.poetry]
name = "dashmips"
version = "0.1.5"
description = "Mips Interpreter"
authors = ["Neal Beeken <nbbeeken@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nbbeeken/dashmips"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Assemblers",
    "Programming Language :: Assembly",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.scripts]
dashmips = "dashmips.__main__:main"

[tool.poetry.dependencies]
"python" = "^3.8"
"dataclasses" = { version = "^0.6", python = "3.6" }

[tool.poetry.dev-dependencies]
"pip" = "^20.1.1"
"wheel" = "^0.34.2"
"mypy" = "^0.782"
"mypy-extensions" = "^0.4.1"
"pycodestyle" = "^2.5.0"
"pydocstyle" = "^5.0.2"
"black" = "^19.10b0"
"pytest" = "^5.0.1"
"pytest-pycodestyle" = "^2.0.1"
"pytest-pydocstyle" = "^2.0.1"
"pytest-mypy" = "^0.6.2"
"pytest-black" = "^0.3.9"

[tool.black]
"line-length" = 160

[metadata]
license_files = "LICENSE"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
